# Adafruit_Python_DHT

./: pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
Adafruit_DHT/: Orange_Pi.py  common.py  platform_detect.py
examples/: dht_test.py
source/: _Orange_Pi_Driver.c
source/Orange_Pi/: opi_dht_read.c  opi_dht_read.h  opi_mmio.c  opi_mmio.h
source/Orange_Pi_Zero_2/: o_pi_z_2_dht_read.c  o_pi_z_2_dht_read.h  o_pi_z_2_mmio.c  o_pi_z_2_mmio.h
